# searchless-ngx

./: .cursorrules  .env.example  .gitignore  README.md  RELEASE_NOTES.md  WEBUI_SETUP.md  docker-compose.yml  init.sh  pyproject.toml  run_test.sh
.github/workflows/: ci.yml
api/: paperless_client.py
core/: config.py  logger.py  providers.py
docker/: Dockerfile
scripts/: test_mcp_raw.py  webui-connection.json
semantic/: bulk_sync.py  metadata_cache.py  sync_job.py  vector_store.py
server/: app.py  mcp_tools.py
tests/: conftest.py  test_embedding_batching.py  test_mcp_helpers.py  test_mcp_tools.py  test_metadata_cache.py  test_paperless_client.py  test_periodic_sync.py  test_providers.py  test_sync_job_helpers.py  test_vector_store.py
